<resources>
    <string name="app_name">BranchOut</string>

    <!-- Erros -->
    <string name="erro_email_invalido">Email inválido!</string>
    <string name="erro_senha_invalida">Senha Inválida!</string>
    <string name="erro_nome_vazio">Nome obrigatório!</string>
    <string name="erro_email_vazio">Email obrigatório!</string>
    <string name="erro_senha_vazia">Senha obrigatória!</string>
    <string name="erro_repetir_senha_vazia">Repita sua senha!</string>
    <string name="erro_data_nascimento_vazia">Data de Nascimento obrigatória!</string>
    <string name="erro_descricao_vazia">Descrição obrigatória!</string>
    <string name="erro_meios_de_contato_vazio">Contato obrigatório!</string>
    <string name="erro_idiomas_vazio">Idioma(s) obrigatório(s)!</string>
    <string name="erro_foto_vazia">É necessário tirar uma foto!</string>
    <string name="erro_senhas_nao_correspondem">Senhas não batem ou muito curta!</string>
    <string name="erro_nome_curto">Nome com menos de 4 letras!</string>
    <string name="erro_meio_contato_curto">Meio(s) de contato muito curto!</string>
    <string name="erro_descricao_curta">Descrição muito curta!</string>
    <string name="erro_idiomas_curto">Idiomas deve pelo menos 10 letras!</string>

    <string name="erro_data_formato_errado">Erro no formato da data!</string>
    <string name="erro_sem_internet">Sem acesso à internet</string>
    <string name="erro_usuario_ja_cadastrado">Usuário já cadastrado!</string>

    <!--  Cadastro Activity  -->
    <string name="cadastro_activity_label">Cadastro</string>
    <string name="cadastro_activity_btn_cadastrar">Cadastrar</string>
    <string name="cadastro_activity_nome">Nome: </string>
    <string name="cadastro_activity_escolher_foto">Clique para tirar uma foto</string>
    <string name="cadastro_activity_email">Email: </string>
    <string name="cadastro_activity_senha">Senha: </string>
    <string name="cadastro_activity_repetir_senha">Repita a senha: </string>
    <string name="cadastro_activity_data_nascimento">Data de Nascimento: </string>
    <string name="cadastro_activity_descricao">Descrição: </string>
    <string name="cadastro_activity_meios_de_contato">Meios de contato: </string>
    <string name="cadastro_activity_idiomas">Idiomas: </string>
    <string name="cadastro_activity_hint_nome">Maria do Carmo</string>
    <string name="cadastro_activity_hint_email">contato@branchout.com</string>
    <string name="cadastro_activity_hint_senha">*******</string>
    <string name="cadastro_activity_hint_repetir_senha">*******</string>
    <string name="cadastro_activity_hint_data_nascimento">14/09/1994</string>
    <string name="cadastro_activity_hint_descricao">Gosto de musica, esportes e jogos de video game</string>
    <string name="cadastro_activity_hint_meios_de_contato">Whatsapp:(81)99999-9999</string>
    <string name="cadastro_activity_hint_idiomas">Português - Fluente, Inglês - Intermediário</string>

    <string name="cadastro_activity_saudacao">Sucesso ao cadastrar!</string>

    <!--  Login Activity  -->
    <string name="login_activity_email">Usuário:</string>
    <string name="login_activity_senha">Senha:</string>
    <string name="login_activity_email_vazio">Email obrigatório!</string>
    <string name="login_activity_senha_vazia">Senha obrigatória!</string>
    <string name="login_activity_email_invalido">Email inválido!</string>
    <string name="login_activity_senha_invalida">Senha Inválida!</string>
    <string name="login_activity_hint_senha">*****</string>
    <string name="login_activity_nao_cadastro">Não é cadastrado? Cadastre-se já!</string>
    <string name="login_acitivty_esquece_senha">Esqueceu a senha?</string>
    <string name="login_activity_hint_email">fulano@branchout.com</string>
    <string name="login_activity_btn_login">Login</string>
    <string name="login_activity_senha_curta">Senha Curta!</string>

    <!--   Perfil Fragment  -->
    <string name="fragment_perfil">Perfil</string>
    <string name="fragment_perfil_btn_alterar">Alterar</string>
    <string name="fragment_perfil_btn_finalizar">Finalizar</string>
    <string name="fragment_perfil_btn_cancelar">Desfazer</string>

    <!--  Usuarios Fragment  -->
    <string name="fragment_usuarios">Usuários</string>
    <string name="fragment_usuarios_txt_encontrados">Usuários encontrados</string>
    <string name="fragment_usuarios_btn_pesquisar">Pesquisar</string>

    <!--  Match Fragment  -->
    <string name="fragment_match">Match</string>
    <string name="fragment_match_solicitacoes">Solicitações</string>
    <string name="fragment_match_contatos">Contatos</string>

    <!-- Informações Activity -->
    <string name="informacao_activity_hint_primeiro_nome">Carlos</string>
    <string name="informacao_activity_txt_nome">Nome:</string>
    <string name="informacao_activity_hint_nome_completo">Carlos Almeida</string>
    <string name="informacao_activity_txt_idade">Idade:</string>
    <string name="informacao_activity_txt_idiomas">Idiomas</string>
    <string name="informacao_activity_txt_contato">Contato:</string>
    <string name="informacao_activity_hint_resumo">Amante de Filmes e Séries.</string>
    <string name="informacao_activity_hint_contato">(81)98441-2000</string>
    <string name="informacao_activity_hint_idade">34</string>
    <string name="informacao_activity_hint_idiomas">Português - Fluente/n Ingles - Intermediario</string>


</resources>




