<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:id="@+id/activity_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:mContext="com.example.bernardojr.branchout.gui.PerfilFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:id="@+id/perfil_fragment_img_foto"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />


            <TextView
                android:text="@string/cadastro_activity_escolher_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/perfil_fragment_img_foto"
                android:id="@+id/perfil_fragment_txt_foto" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_activity_nome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_activity_hint_nome"
            android:id="@+id/perfil_fragment_nome"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_activity_email"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_activity_hint_email"
            android:id="@+id/perfil_fragment_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_activity_data_nascimento"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_activity_hint_data_nascimento"
            android:id="@+id/perfil_fragment_data_nascimento"
            android:inputType="date"
            android:maxLines="1"
            android:textIsSelectable="true"
            android:focusable="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_activity_meios_de_contato"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_activity_hint_meios_de_contato"
            android:id="@+id/perfil_fragment_meios_contato"
            android:maxLines="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_activity_descricao"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cadastro_activity_hint_descricao"
            android:id="@+id/perfil_fragment_descricao"
            android:maxLines="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="top"
                android:text="@string/cadastro_activity_btn_cadastrar"
                android:id="@+id/perfil_fragment_btn_voltar"
                android:layout_marginStart="27dp"
                android:layout_alignTop="@+id/perfil_fragment_btn_prox"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <Button
                android:text="@string/cadastro_activity_btn_cadastrar"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_gravity="start"
                android:layout_height="wrap_content"
                android:id="@+id/perfil_fragment_btn_prox"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/perfil_fragment_btn_voltar"
                android:layout_marginStart="57dp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>