<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:mContext="com.example.bernardojr.branchout.gui.LoginActivity">
    <LinearLayout
        android:id="@+id/activity_Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logof"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/Login_activity_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/login_activity_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_hint_email"
            android:id="@+id/login_activity_email"
            android:inputType="textEmailAddress"
            android:lines="1"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_senha"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_activity_hint_senha"
            android:inputType="textPassword"
            android:id="@+id/login_activity_senha"
            android:lines="1"
            android:singleLine="true"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login_activity_btn_login"
                android:id="@+id/login_activity_btn_login"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_acitivty_esquece_senha"
                android:textColor="@color/colorPrimary"
                android:id="@+id/login_activity_esqueceu"
                android:gravity="start"
                android:layout_gravity="center"
                android:layout_marginStart="27dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_nao_cadastro"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorAccent"
            android:id="@+id/login_activity_cadastrar"/>
    </LinearLayout>
</ScrollView>